--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>齋藤中坑のHP</title>
+   <meta name="keywords" content="saitoataru,齋藤中坑,齋藤あたる,">
+   <meta name="description" content="齋藤中坑のブログページです。">
+   <meta property="og:title" content="齋藤中坑のブログページです">
+   <meta property="og:description" content="齋藤中坑のブログページです。">
+   <meta property="og:site_name" content="齋藤中坑のHP">
+   <meta property="og:type" content="website">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
