--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
    <meta property="og:type" content="website">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
+  <meta name="google-site-verification" content="1BdgO_BW2gRjvq4PXBwS8SFad_MLKSZ52WJdkY6_tnk" />
 </head>
 <body>
   <header>
