--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
   </header>
   <div class="top-wrapper">
     <div class="container">
-      <h1>LEARN TO CODE.<br>LEARN TO BE CREATIVE.</h1>
-      <p>Progateはオンラインプログラミング学習サービスです。<br>初心者にもやさしいスライドとレッスンで、ウェブサービスを作りながらプログラミングを学んでいきましょう。</p>
+      <h1>ATARU'VIEW<br>SAITOATARU</h1>
+      <p>何気ない日々を綴る日記のようなもの</p>
       <div class="btn-wrapper">
         <a href="#" class="btn signup">新規登録はこちら</a>
         <p>or</p>
