--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <div class="top-wrapper">
     <div class="container">
-      <h1>ATARU'VIEW<br>SAITOATARU</h1>
+      <h1>ATARU'S VIEW<br>SAITOATARU</h1>
       <p>何気ない日々を綴る日記のようなもの</p>
       <div class="btn-wrapper">
         <a href="#" class="btn signup">新規登録はこちら</a>
