--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <div class="top-wrapper">
     <div class="container">
-      <h1>ATARU'S VIEW<br>SAITOATARU</h1>
+      <h1>ATARU'VIEW<br>SAITOATARU</h1>
       <p>何気ない日々を綴る日記のようなもの</p>
       <div class="btn-wrapper">
         <a href="#" class="btn signup">新規登録はこちら</a>
@@ -28,16 +28,17 @@
       </div>
     </div>
   </div>
-  <div class="lesson-wrapper">
+  <div class="MyHobby">
+     <!--lessn-wrapperをmyhobbyに変更-->
     <div class="container">
       <div class="heading">
-        <h2>Learn Where to Get Started!</h2>
+        <h2>MY PHOTO</h2>
       </div>
-      <div class="lessons">
-        <div class="lesson">
-          <div class="lesson-icon">
-            <img src="https://prog-8.com/images/html/advanced/html.png">
-            <p>HTML & CSS</p>
+      <div class="instagram">
+        <!-- InstaWidget -->
+        <!-- InstaWidget -->
+        <a href="https://instawidget.net/v/user/3110ataru" id="link-0b26640556a698ae4b38c9e726cf335fca9eb18a710dff22da3865c11a4e350c">@3110ataru</a>
+        <script src="https://instawidget.net/js/instawidget.js?u=0b26640556a698ae4b38c9e726cf335fca9eb18a710dff22da3865c11a4e350c&width=600px"></script>
           </div>
           <p class="text-contents">ウェブページの作成に使用される言語です。HTMLとCSSを組み合わせることで、静的なページを作り上げることができます。</p>
         </div>
@@ -83,4 +84,3 @@
   </footer>
 </body>
 </html>
-
