--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <div class="top-wrapper">
     <div class="container">
-      <h1>ATARU'VIEW<br>SAITOATARU</h1>
+      <h1>ATARU's VIEW<br>SAITOATARU</h1>
       <p>何気ない日々を綴る日記のようなもの</p>
       <div class="btn-wrapper">
         <a href="#" class="btn signup">新規登録はこちら</a>
@@ -39,12 +39,22 @@
         <!-- InstaWidget -->
         <a href="https://instawidget.net/v/user/3110ataru" id="link-0b26640556a698ae4b38c9e726cf335fca9eb18a710dff22da3865c11a4e350c">@3110ataru</a>
         <script src="https://instawidget.net/js/instawidget.js?u=0b26640556a698ae4b38c9e726cf335fca9eb18a710dff22da3865c11a4e350c&width=600px"></script>
-          </div>
-          <p class="text-contents">ウェブページの作成に使用される言語です。HTMLとCSSを組み合わせることで、静的なページを作り上げることができます。</p>
-        </div>
-        <div class="lesson">
-          <div class="lesson-icon">
-            <img src="https://prog-8.com/images/html/advanced/jQuery.png">
+      </div>
+    </div>
+    <!--"lesson"を"profile"に変更-->
+        <div class="profile">
+          <div class="profile_caption">
+            <h2>SAITO ATARU</h2>
+            <img src="img/my.png">
+            <p>1995.08.14</p>
+            <p>Japanise-native,English-fluent</p>
+            <p>live in Tokyo</p>
+            <p>graduated Maebashi High School(2011-2013)</p>
+            <p>Apr 2015-current KeioUniversity,<br>Japan Bachelor of Faculty of Commerce</p>
+            <p>"I beling to"<a href="http://taniguchiseminar.strikingly.com"target="_blank">
+            "Taniguchi Seminar."</a>"which specializes 'Dynamic Capability' <br>and 'Comparative Institutional Analysis'."</p>
+            <!--"lesson-icon"を"my-icon"に変更-->
+
             <p>jQuery</p>
           </div>
           <p class="text-contents">素敵な動きを手軽に実装できるJavaScriptライブラリです。 アニメーション効果をつけたり、Ajax（エイジャックス）を使って外部ファイルを読み込んだりと色々なことができます。</p>
@@ -84,3 +94,4 @@
   </footer>
 </body>
 </html>
+
