--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="profile">
           <div class="profile_caption">
             <h2>SAITO ATARU</h2>
-            <img src="img/my.png">
+            <img src="my.jpg"width="160"height="160">
             <p>1995.08.14</p>
             <p>Japanise-native,English-fluent</p>
             <p>live in Tokyo</p>
@@ -94,4 +94,3 @@
   </footer>
 </body>
 </html>
-
