--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="google-site-verification" content="1BdgO_BW2gRjvq4PXBwS8SFad_MLKSZ52WJdkY6_tnk" />
@@ -32,16 +33,8 @@
      <!--lessn-wrapperをmyhobbyに変更-->
     <div class="container">
       <div class="heading">
-        <h2>MY PHOTO</h2>
+        <h2>Profile</h2>
       </div>
-      <div class="instagram">
-        <!-- InstaWidget -->
-        <!-- InstaWidget -->
-        <a href="https://instawidget.net/v/user/3110ataru" id="link-0b26640556a698ae4b38c9e726cf335fca9eb18a710dff22da3865c11a4e350c">@3110ataru</a>
-        <script src="https://instawidget.net/js/instawidget.js?u=0b26640556a698ae4b38c9e726cf335fca9eb18a710dff22da3865c11a4e350c&width=600px"></script>
-      </div>
-    </div>
-    <!--"lesson"を"profile"に変更-->
         <div class="profile">
           <div class="profile_caption">
             <h2>SAITO ATARU</h2>
@@ -51,46 +44,43 @@
             <p>live in Tokyo</p>
             <p>graduated Maebashi High School(2011-2013)</p>
             <p>Apr 2015-current KeioUniversity,<br>Japan Bachelor of Faculty of Commerce</p>
-            <p>"I beling to"<a href="http://taniguchiseminar.strikingly.com"target="_blank">
-            "Taniguchi Seminar."</a>"which specializes 'Dynamic Capability' <br>and 'Comparative Institutional Analysis'."</p>
+            <p>"I belong to"<a href="http://taniguchiseminar.strikingly.com"target="_blank">
+            "Taniguchi Seminar".</a>"which specializes 'Dynamic Capability' <br>and 'Comparative Institutional Analysis'."</p>
             <!--"lesson-icon"を"my-icon"に変更-->
+          </div>
+        </div>
 
-            <p>jQuery</p>
-          </div>
-          <p class="text-contents">素敵な動きを手軽に実装できるJavaScriptライブラリです。 アニメーション効果をつけたり、Ajax（エイジャックス）を使って外部ファイルを読み込んだりと色々なことができます。</p>
-        </div>
-        <div class="lesson">
-          <div class="lesson-icon">
-            <img src="https://prog-8.com/images/html/advanced/ruby.png">
-            <p>Ruby</p>
-          </div>
-          <p class="text-contents">オープンソースの動的なプログラミング言語で、 シンプルさと高い生産性を備えています。大きなWebアプリケーションから小さな日用ツールまで、さまざまなソフトウェアを作ることができます。</p>
-        </div>
-        <div class="lesson">
-          <div class="lesson-icon">
-            <img src="https://prog-8.com/images/html/advanced/php.png">
-            <p>PHP</p>
-          </div>
-          <p class="text-contents">HTMLだけではページの内容を変えることはできません。PHPはHTMLにプログラムを埋め込み、それを可能にします。</p>
-        </div>
+      <div class="heading">
+        <h2>MY PHOTO</h2>
       </div>
-      <div class="clear"></div>
+      <div class="instagram">
+        <!-- InstaWidget -->
+        <!-- InstaWidget -->
+        <a href="https://instawidget.net/v/user/3110ataru" id="link-0b26640556a698ae4b38c9e726cf335fca9eb18a710dff22da3865c11a4e350c">@3110ataru</a>
+        <script src="https://instawidget.net/js/instawidget.js?u=0b26640556a698ae4b38c9e726cf335fca9eb18a710dff22da3865c11a4e350c&width=600px"></script>
+      </div>
+    </div>
+    <!--lesson"を"profile"に変更-->
+    </div>
+
     </div>
   </div>
-  <div class="message-wrapper">
-    <div class="container">
-      <div class="heading">
-        <h2>さぁ、あなたもProgateでプログラミングを学んでみませんか?</h2>
-        <h3>Let's learn to code, learn to be creative!</h3>
-      </div>
-      <span class="btn message">さっそく開発する</span>
+
+  <div class="contact">
+    <h1>Contact&SNS</h1>
+    <div class="icons">
+      <a href="https://twitter.com/ata_tatata?lang=ja"target="_blank">
+      <i class="fab fa-twitter fa-5x fa-fw twitter-color"></i>
+      </a>
+      <a href="https://www.facebook.com/ataru.saitou"target="blank">
+      <i class="fab fa-facebook-square fa-5x fa-fw facebook-color"aria-hidden="true"></i>
+      </a>
+      <a href="https://www.instagram.com/3110ataru/?hl=ja"target="blank">
+      <i class="fa fa-instagram fa-5x fa-fw instagram-color" aria-hidden="true"></i>
+    </a>
     </div>
   </div>
   <footer>
-    <div class="container">
-      <img src="https://prog-8.com/images/html/advanced/footer_logo.png">
-      <p>Learn to Code, Learn to be Creative.</p>
-    </div>
   </footer>
 </body>
 </html>
