--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div class="top-wrapper">
     <div class="container">
       <h1>ATARU's VIEW<br>SAITOATARU</h1>
-      <p>何気ない日々を綴る日記のようなもの</p>
+      <p>プロフィールをまとめてます</p>
     </div>
   </div>
   <div class="MyHobby">
