--- a/index.html
+++ b/index.html
@@ -37,10 +37,11 @@
             <p>Japanise-native,English-fluent</p>
             <p>live in Tokyo</p>
             <p>graduated Maebashi High School(2011-2013)</p>
-            <p>Apr 2015-current KeioUniversity,<br>Japan Bachelor of Faculty of Commerce</p>
+            <p>Apr 2015-2019 KeioUniversity,<br>Japan Bachelor of Faculty of Commerce</p>
             <p>"I belong to"<a href="http://taniguchiseminar.strikingly.com"target="_blank">
             "Taniguchi Seminar".</a>"which specializes 'Dynamic Capability' <br>and 'Comparative Institutional Analysis'."</p>
             <!--"lesson-icon"を"my-icon"に変更-->
+            <p>Apr 201９-current Recruit Holdings Co., Ltd.</p>
           </div>
         </div>
 
