--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
             <p>1995.08.14</p>
             <p>Japanise-native,English-fluent</p>
             <p>live in Tokyo</p>
-            <p>graduated Maebashi High School(2011-2013)</p>
-            <p>Apr 2015-2019 KeioUniversity,<br>Japan Bachelor of Faculty of Commerce</p>
+            <p>2011-2013 Maebashi High School</p>
+            <p>2015-2019 KeioUniversity,<br>Japan Bachelor of Faculty of Commerce</p>
             <p>"I belong to"<a href="http://taniguchiseminar.strikingly.com"target="_blank">
             "Taniguchi Seminar".</a>"which specializes 'Dynamic Capability' <br>and 'Comparative Institutional Analysis'."</p>
             <!--"lesson-icon"を"my-icon"に変更-->
-            <p>Apr 2019-current Recruit Holdings Co., Ltd.</p>
+            <p>2019-current Recruit Holdings Co., Ltd.</p>
           </div>
         </div>
 
