--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <p>"I belong to"<a href="http://taniguchiseminar.strikingly.com"target="_blank">
             "Taniguchi Seminar".</a>"which specializes 'Dynamic Capability' <br>and 'Comparative Institutional Analysis'."</p>
             <!--"lesson-icon"を"my-icon"に変更-->
-            <p>2019-current Recruit Holdings Co., Ltd.</p>
+            <p>2019-current <a href="https://recruit-holdings.com/ja/" taget="blank"> Recruit Holdings Co., Ltd.</p>
           </div>
         </div>
 
